Sun Jan 25 00:45:45 1998  Harri Porten  <porten@tu-harburg.de>

	* docking.cpp: included a hide() statement to cleanly undock
	the widget from the panel. Otherwise the window stayed invisible
	after one dock/undock-cycle.

Sat Jan 24 03:40:44 1998  Harri Porten  <porten@tu-harburg.de>

	* fixed a bug (occuring twice) that caused the if-statement for
	command_on_connect and command_on_disconnect to be always true.

Fri Jan 23 01:32:57 1998  Harri Porten  <porten@tu-harburg.de>

	* fixed alignment in conwindow.cpp's layout.

Wed Jan 21 03:22:43 1998  Harri Porten  <porten@tu-harburg.de>

	* prevented the password from being left in kppprc after the
 	option 'Store password' has just been turned off
	
	* the ID & password field will be disabled if no account has
	been created yet

	* pppdata.cpp: removed absolute path for default log viewer
	to prevent warning messages upon first startup if KDE's location
 	differs from /usr/local/kde

	* removed gpppdata.Id() and gpppdata.setId() since they have been
	replaced by storedUsername() and setStoredUsername()

Tue Jan 20 15:30:08 1998  Mario Weilguni  <mweilguni@sime.com>

	* Sigh. After unintentionally deleting my account for the sixth
	time, I added a yesNo() dialog to confirm deleting an
	account. This is VERY important, because if you click on "Show
	log" and double-click onto a file to view it and you have the bad
	luck that the filename is just over the "Delete" button, the
	account will be gone.

	* runtests.cpp: gpppdata is now saved after modifications in
	runtests(), and the default log viewer is set correctly

Tue Jan 20 03:10:35 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* tried to get the docking window to display tooltip with transfer
	bytes statistice. Failed. Need to contact Matthias about it.
       
	* Removed the 'Dock' button. It is superfluous. Use the window
	close button to hide the window.

	* fixed the flicker problem that was reintroduced in pppstatdlg.cpp
